Fix event actions dropdown alignment

--- a/indico/web/client/styles/modules/_event_management.scss
+++ b/indico/web/client/styles/modules/_event_management.scss
@@ -37,6 +37,7 @@
   .i-button {
     text-align: left;
     margin: 0;
+    display: inline-block;
   }
 }
 
